[package]
name = "encrypted_id"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.base64]
version = "~0.10.1"
[dependencies.byteorder]
version = "~1.3.2"
[dependencies.crc]
version = "^1.8.1"
[dependencies.rust-crypto]
version = "0.2.36"
[dependencies.failure]
version = "0.1.5"